# qt-activex-test

./: CMakeLists.txt  README.md
activex/: Bar.rgs  CMakeLists.txt  Foo.rgs  FooBar.cc  FooBar.h  FooBarOcx.cc  FooBarOcx.def  FooBarOcx.idl  FooBarOcx.rc  FooBarOcx.rgs  Resource.h  foo.idl  stdafx.h
qt/: CMakeLists.txt  foobarocx.cpp  foobarocx.h  main.cc
